[fix] icon mobile version

--- a/static/mobile_str_1.css
+++ b/static/mobile_str_1.css
@@ -43,7 +43,7 @@
         height: 1.7256411vw;
         
         margin-left: 1.6358974vw;
-        margin-top: 0.2794871vw;
+        margin-top: 2.4794871vw;
     }
     
     .mobile_header_logo_img_2
@@ -52,13 +52,13 @@
         height: 1.061vw;
         
         margin-left: 0.4846153vw;
-        margin-top: 0.820512vw;
+        margin-top: 0.320512vw;
     }
     
     .mobile_header_logo_img_3
     {
         width: 0.9vw;
-        height: 0.9vwx;
+        height: 0.9vw;
         
         margin-left: 2.2128205vw;
         margin-top: -0.51282vw;
